# dockerq

./: Dockerfile  README.md  entry-point.sh  log.py  middlewear.py  pyproject.toml  requirements.txt  serve.py
systemd/: dockerq.service
templates/: base.html  home.html
tests/: test_submit.py
