[tool.poetry]
name = "dockerq"
version = "0.1.0"
description = ""
authors = ["tmgrask <t.mackersy@psiphon.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
aiodocker = "^0.19.1"
uvicorn = "^0.14.0"
starlette = "^0.14.2"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
pytest-asyncio = "^0.15.1"
APScheduler = "^3.7.0"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
